--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
 alembic==1.15.1
+attrs==25.3.0
 bcrypt==4.3.0
 blinker==1.9.0
 click==8.1.8
 colorama==0.4.6
+flasgger==0.9.7.1
 Flask==3.1.0
 flask-cors==5.0.1
 Flask-JWT-Extended==4.7.1
@@ -12,10 +14,19 @@ flask-swagger-ui==4.11.1
 greenlet==3.1.1
 itsdangerous==2.2.0
 Jinja2==3.1.6
+jsonschema==4.23.0
+jsonschema-specifications==2024.10.1
 Mako==1.3.9
 MarkupSafe==3.0.2
+mistune==3.1.2
+packaging==24.2
 PyJWT==2.10.1
 python-dotenv==1.0.1
+PyYAML==6.0.2
+referencing==0.36.2
+rpds-py==0.23.1
+setuptools==76.0.0
+six==1.17.0
 SQLAlchemy==2.0.38
 typing_extensions==4.12.2
 validators==0.34.0
