--- a/src/docs/auth/user_info.yaml
+++ b/src/docs/auth/user_info.yaml
@@ -3,14 +3,17 @@ User Info
 tags:
   - Authentication
 
-parameters:
-  - name: Authorization
-    description: Bearer token required for authentication
-    in: header
-    required: true
-    schema:
-      type: string
-      example: "Bearer your_jwt_token"
+# parameters:
+#   - name: Authorization
+#     description: Bearer token required for authentication
+#     in: header
+#     required: true
+#     schema:
+#       type: string
+#       example: "Bearer your_jwt_token"
+
+security:
+  - Bearer: []
 
 responses:
   200:
