--- a/src/docs/short_url.yaml
+++ b/src/docs/short_url.yaml
@@ -8,11 +8,21 @@ tags:
 parameters:
   - in: path
     name: short_url
+    description: The short URL identifier
     required: true
+    schema:
+      type: string
+      example: "cR3g6L"
 
 responses:
   302:
-    description: Redirects to the original link
+    description: Redirects to the original URL
+    headers:
+      Location:
+        description: The original URL
+        schema:
+          type: string
+          example: "https://example.com"
   
   404:
     description: Record was not found 
