--- a/src/docs/bookmarks/get_bookmarks.yaml
+++ b/src/docs/bookmarks/get_bookmarks.yaml
@@ -1,60 +1,95 @@
-Get All Bookmarks of the Logged-In User
-
+Get all Bookmarks for the current user
 ---
+tags:
+  - Bookmarks
 
-get:
-  tags:
-    - Bookmarks
-  summary: Get all bookmarks
-  description: Retrieve all bookmarks for the currently logged-in user.
-  
-  responses:
-    200:
-      description: A list of bookmarks for the user
-      content:
-        application/json:
-          schema:
-            type: object
-            properties:
-              data:
-                type: array
-                items:
-                  type: object
-                  properties:
-                    id:
-                      type: integer
-                    body:
-                      type: string
-                    url:
-                      type: string
-                    short_url:
-                      type: string
-                    visit:
-                      type: integer
-                    created_at:
-                      type: string
-                      format: date-time
-                    updated_at:
-                      type: string
-                      format: date-time
-              meta:
+security:
+  - Bearer: []
+
+parameters:
+  - in: query
+    name: page
+    description: The page number for pagination
+    required: false
+    schema:
+      type: integer
+      example: 1
+  - in: query
+    name: per_page
+    description: The number of items per page
+    required: false
+    schema:
+      type: integer
+      example: 5
+
+responses:
+  200:
+    description: A list of bookmarks
+    content:
+      application/json:
+        schema:
+          type: object
+          properties:
+            data:
+              type: array
+              items:
                 type: object
                 properties:
-                  page:
+                  id:
                     type: integer
-                  pages:
+                    example: 1
+                  body:
+                    type: string
+                    example: "My favorite website"
+                  url:
+                    type: string
+                    example: "https://example.com"
+                  short_url:
+                    type: string
+                    example: "cR3g6L"
+                  visit:
                     type: integer
-                  total_count:
-                    type: integer
-                  prev_page:
-                    type: integer
-                  next_page:
-                    type: integer
-                  has_prev:
-                    type: boolean
-                  has_next:
-                    type: boolean
-    400:
-      description: Invalid request
-    401:
-      description: Unauthorized
+                    example: 0
+                  created_at:
+                    type: string
+                    format: date-time
+                    example: "2025-01-01T12:00:00"
+                  updated_at:
+                    type: string
+                    format: date-time
+                    example: "2025-01-01T12:00:00"
+            meta:
+              type: object
+              properties:
+                page:
+                  type: integer
+                  example: 1
+                pages:
+                  type: integer
+                  example: 10
+                total_count:
+                  type: integer
+                  example: 50
+                prev_page:
+                  type: integer
+                  example: 0
+                next_page:
+                  type: integer
+                  example: 2
+                has_prev:
+                  type: boolean
+                  example: false
+                has_next:
+                  type: boolean
+                  example: true
+
+  401:
+    description: Unauthorized
+    content:
+      application/json:
+        schema:
+          type: object
+          properties:
+            error:
+              type: string
+              example: "Missing or invalid JWT token"
